--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,8 @@ set(PROJECT_VERSION_COUNT 3)
 set(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
 set(PROJECT_VENDOR "Jacob Baines")
 set(PROJECT_COPYRIGHT_YEAR "2014")
-set(PROJECT_DOMAIN_FIRST "elfparser")
-set(PROJECT_DOMAIN_SECOND "com")
+set(PROJECT_DOMAIN_FIRST "shelfparser")
+set(PROJECT_DOMAIN_SECOND "xyz")
 set(PROJECT_DOMAIN "${PROJECT_DOMAIN_FIRST}.${PROJECT_DOMAIN_SECOND}")
 
 # compiler flags
@@ -271,9 +271,9 @@ else()
         SET(CPACK_NSIS_DISPLAY_NAME "ELF Parser")
         SET(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}\\\\src\\\\ui\\\\icon_72529.ico")
         SET(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}\\\\src\\\\ui\\\\icon_72529.png")
-        SET(CPACK_NSIS_URL_INFO_ABOUT "http://www.elfparser.com")
-        SET(CPACK_NSIS_HELP_LINK "http://www.elfparser.com/contact.html")
-        SET(CPACK_NSIS_CONTACT "admin@elfparser.com")
+        SET(CPACK_NSIS_URL_INFO_ABOUT "http://shelfparser.xyz")
+        SET(CPACK_NSIS_HELP_LINK "http://shelfparser.xyz/contact.html")
+        SET(CPACK_NSIS_CONTACT "admin@shelfparser.xyz")
         SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
         SET(CPACK_NSIS_CREATE_ICONS "CreateShortCut '\$SMPROGRAMS\\\\$STARTMENU_FOLDER\\\\${PROJECT_NAME}.lnk' '\$INSTDIR\\\\${PROJECT_NAME}.exe'")
         SET(CPACK_NSIS_EXECUTABLES_DIRECTORY ".")
@@ -288,8 +288,8 @@ else()
         SET(CPACK_PACKAGE_DESCRIPTION "elfparser")
         SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Binary static analysis tool")
         SET(CPACK_PACKAGE_VENDOR "${PROJECT_VENDOR}")
-        SET(CPACK_PACKAGE_CONTACT "admin@elfparser.com")
-        SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "admin@elfparser.com")
+        SET(CPACK_PACKAGE_CONTACT "admin@shelfparser.xyz")
+        SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "admin@shelfparser.xyz")
         SET(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
         SET(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
         SET(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
