more boost removal

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,13 @@ _deps
 *.swp
 .DS_Store
 Thumbs.db
+
+#visual studio code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+.history/
+*.vsix
